# trackerx

./: Cargo.toml  LICENSE  README.md
src/: cli.rs  db.rs  main.rs  models.rs
src/commands/: add.rs  categories.rs  export.rs  list.rs  remove.rs  stats.rs
