[package]
name = "trackerx"
version = "0.1.1"
edition = "2024"
authors = ["Chewawi <rafael.noraa08@proton.me>"]
license-file = "LICENSE"
description = "A universal CLI tracker for anything."
repository = "https://github.com/KodekoStudios/trackerx"
homepage = "https://github.com/KodekoStudios/trackerx"
readme = "README.md"
keywords = ["cli", "data", "productivity", "tracker"]
categories = ["command-line-utilities"]

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.51", features = ["derive"] }
dirs-next = "2.0.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
